--- a/src/main/resources/templates/newExpense.html
+++ b/src/main/resources/templates/newExpense.html
@@ -8,13 +8,13 @@
 			<form method="POST" th:object="${expense}">
 				<div class="form-group">
 					<label for="name">Name: </label>
-					<input type="text" th:field="*{name}" class="form-control">
+					<input type="text" th:field="*{name}" id="name" class="form-control">
 					<span class="validation-error" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
 				</div>
 				
 				<div class="form-group">
 					<label for="type">Type: </label>
-					<select th:field="*{type}" class="form-control">
+					<select th:field="*{type}" id="type" class="form-control">
 						<option value="" >---Choose type---</option>
 						<option 
 							th:each="expenseType : ${expenseTypes}"
@@ -27,7 +27,7 @@
 				
 				<div class="form-group">
 					<label for="amount">Amount: </label>
-					<input type="number" th:field="*{amount}" class="form-control">
+					<input type="number" th:field="*{amount}" id="amount" class="form-control">
 					<span class="validation-error" th:if="${#fields.hasErrors('amount')}" th:errors="*{amount}"></span>
 				</div>
 				<input type="submit" class="btn btn-primary" value="Add expense">
