--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,16 +9,16 @@
         <div class="col-sm-4 offset-sm-4 text-center">
             <form method="POST" action="/login">
                 <div class="form-group">
-                    <label>Username: </label>
+                    <label th:text="#{msg.lang.username}">Username: </label>
                     <input type="text" name="username">
                 </div>
 
                 <div class="form-group">
-                    <label>Password: </label>
+                    <label th:text="#{msg.lang.password}">Password: </label>
                     <input type="password" name="password">
                 </div>
                 <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
-                <input type="submit" class="btn btn-primary" value="Login">
+                <input type="submit" class="btn btn-primary" th:value="#{msg.lang.login}">
             </form>
         </div>
     </div>
